# interpreter

./: .gitignore  README.md  error_log.txt  pothDataStructure.py  pyproject.toml  requirements.txt  setup.py  tree_output.txt
.github/workflows/: python-app.yml
data_structure/: pothDataStructure.py
documentation/: Business Plan.docx  Software Design Document.docx  Test Plan.docx
ecg_interpreter/: __init__.py  __main__.py  actions.py  clean_article_text.py  clean_people_names.py  clean_text.py  data_structure.py  key_sentence.py  pothDataStructure.py  raw_names.csv  scrape_articles.py  scrape_ecg.py  scrape_people.py  scraping_process.ipynb  tree_funcs.py
ecg_interpreter/.ipynb_checkpoints/: people_sort-checkpoint.ipynb  scraping_process-checkpoint.ipynb
ecg_interpreter/tables/: activity_table.csv  place_table.csv  raw_ecg_map_data.csv  vol1_article_links.csv  vol2_article_links.csv  vol3_article_links.csv  vol4_article_links.csv
ecg_interpreter/tests/: dummy_people_table.csv  test_action_parsing.py  test_key_sent.py  test_sent_parsing.py
experimental_work/: people_sort.ipynb  scraping_by_volume.ipynb
exploration/: bs4_exploration.ipynb  huggingface_exploration.ipynb  scrape_test_articles.ipynb
pattern_finding/: clean_test_files.ipynb  get_test_articles.ipynb  people_pattern_finding.ipynb  people_sentences.txt  tagged_people_sentences.txt
tests/: conftest.py  dummy_people_table.csv  dummy_place_table.csv  test_action_parsing.py  test_data_structure.py  test_database.py  test_key_sent.py  test_tree.py
tool_exploration/: bs4_exploration.ipynb
(+94 files in other folders)
